WindGroup Dev/src/objects/Work_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Work Order Items</relationshipLabel>
        <relationshipName>Work_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Work Order Items</relationshipLabel>
        <relationshipName>Work_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WOI-{0000}</displayFormat>
        <label>Work Order Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>